tree-sitter-rgbasm/grammar.js
    source_file: $ => _top_level_statements($),

    symbol: $ => /[A-Za-z_][A-Za-z0-9_#$@]*/,

    // ----- Reserved keywords -----

    instruction_name: $ => choice(...GENERIC_MNEMONICS.map(kw => KW[kw])),

    register: $ => prec(1, choice(KW.A, KW.B, KW.C, KW.D, KW.E, KW.H, KW.L, KW.AF, KW.BC, KW.DE, KW.HL, KW.SP)),

    directive_keyword: $ =>
      choice(
        KW.ALIGN, KW.BREAK, KW.INCBIN, KW.PRINT, KW.PRINTLN, KW.PURGE, KW.READFILE, KW.DB, KW.DW, KW.DL,
        KW.SHIFT, KW.RSSET, KW.RSRESET, KW.NEWCHARMAP, KW.SETCHARMAP, KW.CHARMAP, KW.PUSHC, KW.POPC,
        KW.FAIL, KW.WARN, KW.FATAL
      ),

    section_type: $ =>
      choice(
        KW.ROM0, KW.ROMX, KW.VRAM, KW.SRAM,
        KW.WRAM0, KW.WRAMX, KW.OAM, KW.HRAM,
      ),

    global_label_block: $ =>
      seq(
        $._global_label_header,
        repeat($._statement),
        repeat($.local_label_block),
      ),

    _global_label_header: $ =>
      seq(
        field('name', alias($.variable, $.global_symbol)),
        choice(token.immediate('::'), token.immediate(':')),
      ),

    // Local label blocks: local label and its contents
    local_label_block: $ =>
      seq(
        $._local_label_header,
        repeat($._statement)
      ),

    _local_label_header: $ =>
      seq(
        field(
          'name',
          choice($.local_symbol, $.qualified_symbol),
        ),
        optional(token.immediate(':')),
      ),

    _statement: $ => choice(
      seq($.instruction_list, optional($.inline_comment), $._eol),
      seq($.directive, optional($.inline_comment), $._eol),
      $.load_block,
      $.pushs_block,
      seq($.block_comment, $._eol),
      $.anonymous_label,
      seq($.inline_comment, $._eol),
      // Empty line
      /\r?\n/,
    ),

    // ----- Section -----

    // Section blocks: SECTION directive and its contents
    section_block: $ =>
      seq(
        $.section_directive,
        optional($.inline_comment),
        $._eol,
        repeat($._statement),
        repeat(alias($.qualified_label_block, $.local_label_block)),
        repeat($.global_label_block),
        optional(
          seq(
            field('end', alias(KW.ENDSECTION, $.endsection_keyword)),
            optional($.inline_comment),
            $._eol,
            optional($._section_end_explicit),
          ),
        ),
      ),

    _section_args: $ =>
      seq(
        optional(field('fragment', alias(KW.FRAGMENT, $.fragment_keyword))),
        optional(field('union', alias(KW.UNION, $.union_keyword))),
        field('name', $.expression),
        optional(seq(',', $.section_type, optional($.section_address))),
        optional($.section_options)
      ),

    section_directive: $ =>
      seq(
        field('keyword', alias(token(prec(1, KW.SECTION)), $.section_keyword)),
        optional($._section_start),
        $._section_args,
      ),

    directive: $ =>
      choice(
        $.assert_directive,
        $.def_directive,
        $.export_directive,
        $.opt_directive,
        $.pusho_directive,
        $.popo_directive,
        $.ds_directive,
        $.include_directive,
        $.simple_directive,
        $.if_block,
        $.for_block,
        $.macro_invocation,
        $.macro_definition,
        $.rept_block,
        $.union_block,
      ),

    ds_directive: $ =>
      seq(
        field('keyword', alias(KW.DS, $.directive_keyword)),
        choice(
          // DS ALIGN[...] [, value...]
          seq(
            $.align_option,
            repeat(seq(',', field('value', $.expression)))
          ),
          // DS size [, value...]
          seq(
            field('size', $.expression),
            repeat(seq(',', field('value', $.expression)))
          ),
        ),
      ),

    def_directive: $ =>
      seq(
        field('keyword', alias(choice(
          token(prec(1, KW.DEF)),
          KW.REDEF,
        ), $.def_keyword)),
        field('name', $.variable),
        choice(
          // String constant: DEF name EQUS "value" or #"value"
          seq(
            field('assign_type', alias(KW.EQUS, $.equs_keyword)),
            field('value', $.expression),
          ),
          // Numeric constant (immutable): DEF name EQU value
          seq(
            field('assign_type', alias(KW.EQU, $.equ_keyword)),
            field('value', $.expression)
          ),
          // Variable (mutable): DEF name = value
          seq(
            field('assign_type', choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '&=', '|=', '^=')),
            field('value', $.expression)
          ),
          // RS offset constants: DEF name RB/RW/RL count
          seq(
            field('assign_type', alias(choice(KW.RB, KW.RW, KW.RL), $.r_keyword)),
            optional(field('value', $.expression))
          ),
        ),
      ),

    assert_directive: $ =>
      prec.right(seq(
        field('keyword', alias(choice(KW.ASSERT, KW.STATIC_ASSERT), $.directive_keyword)),
        // Optional severity with REQUIRED comma: ASSERT [severity,] condition [, message]
        optional(seq(
          $.severity,
          ','
        )),
        field('condition', $.expression),
        optional(seq(',', field('message', $.string_literal)))
      )),

    pusho_directive: $ =>
      seq(
        field('keyword', alias(KW.PUSHO, $.directive_keyword)),
        optional(seq(
          $.opt_arg,
          repeat(seq(',', $.opt_arg))
        )),
      ),

    simple_directive: $ =>
      seq(
        field('keyword', $.directive_keyword),
        optional($.argument_list),
      ),

    include_directive: $ =>
      seq(
        field('keyword', alias(KW.INCLUDE, $.include_keyword)),
        optional(alias('?', $.quiet)),
        optional($.argument_list),
      ),

    argument_list: $ =>
      seq(
        $.expression,
        repeat(seq(',', $.expression))
      ),

    // ----- Macros -----

    macro_arg_raw: $ => token(repeat1(
      choice(
        '\\,',
        /\?/,
      ),
    )),

    _macro_args: $ =>
      seq(
        $._macro_arg,
        repeat(seq(',', $._macro_arg))
      ),

    macro_invocation: $ =>
      seq(
        $.variable,
        optional(alias(token.immediate('?'), $.quiet)),
        optional(
          alias($._macro_args, $.argument_list),
        ),
      ),

    // ----- Control structures -----

    inline_comment: $ => token(seq(';', /[^\r\n]*/)),

    // C-style block comments (RGBDS behavior: no nesting)
    block_comment: $ =>
      token(
        seq(
          '/*',
          repeat(
            choice(
              /[^*]/,
              /\*+[^/]/
            )
          ),
          '*/'
        )
      ),

    // ----- Labels -----

    anonymous_label: $ => token(':'),

    // Anonymous label reference like :+, :++, :-, :--
    anonymous_label_ref: $ =>
      token(choice(
        seq(':', repeat1('+')),
        seq(':', repeat1('-')),
      )),

    // ----- Instructions -----

    instruction_list: $ =>
      seq(
        $.instruction,
        repeat(seq('::', $.instruction))
      ),

    instruction: $ =>
      choice(
        $.call_instruction,
        $.jp_instruction,
        $.jr_instruction,
        $.ret_instruction,
        $.generic_instruction,
      ),

    operand_list: $ =>
      seq(
        $._operand,
        repeat(seq(',', $._operand))
      ),

    _operand: $ =>
      choice(
        $.address,
        $.register,
        $.expression,
      ),

    expression: $ =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.number_literal,
        $.string_literal,
        $.raw_string_literal,
        $.graphics_literal,
        $.char_literal,
        $.anonymous_label_ref,
        $.constant,
        $.fragment_literal,
        $.macro_argument,
        $.macro_arguments_spread,
        $.function_call,
        $.variable,
        $.local_symbol,
        $.qualified_symbol,
        $.paren,
      ),

    binary_expression: $ =>
      choice(
        ...binary_ops($),
        // FIXME: maybe move this to operand?
        //        functions may accept registers as arguments, maybe add operand as option there, too?
        //
        // this is used for the "LD HL,SP+e8" instruction,
        // the only case where a register may show up in an expression,
        prec.left(4,
          seq(
            field('left', alias(KW.SP, $.register)),
            field('operator', /[\+\-]/),
            field('right', $.expression)
          ),
        ),
      ),

    number_literal: $ =>
      token(
        choice(
          // Precise fixed-point: 12.34q8 (q or Q, underscores allowed)
          /\d[\d_]*\.\d[\d_]*[qQ]\d[\d_]*/,
          // Fixed-point: 123.45 (underscores allowed)
          /\d[\d_]*\.\d[\d_]*/,
          // Hexadecimal: $12_AB or 0x12_AB
          /\$[0-9A-Fa-f][0-9A-Fa-f_]*/,
          /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*/,
          // Octal: &123_456 or 0o123_456
          /&[0-7][0-7_]*/,
          /0[oO][0-7][0-7_]*/,
          // Binary: %1010_0101 or 0b1010_0101
          /%[01][01_]*/,
          /0[bB][01][01_]*/,
          // Decimal integer (underscores allowed)
          /\d[\d_]*/
        )
      ),

    // Single-character numeric constants like 'A' or '\n'
    string_literal: $ =>
      choice(
        $._triple_quote_string,
        $._regular_string
      ),

    _triple_quote_string: $ =>
      seq(
        '"""',
        repeat(choice(
          $._string_content_triple,
          seq($._peek_global, $.identifier),
          $.escape,
          $.macro_argument,
          $.macro_arguments_spread,
          $.wrong_escape,
        )),
        '"""',
      ),

    _regular_string: $ =>
      seq(
        '"',
        repeat(choice(
          $._string_content,
          seq($._peek_global, $.identifier),
          $.escape,
          $.macro_argument,
          $.macro_arguments_spread,
          $.wrong_escape,
        )),
        '"'
      ),

    uniqueness_affix: $ => token.immediate('\\@'),
