tree-sitter-rgbasm/test/corpus/labels.txt
================================================================================
Labels: basic usage
================================================================================

Global:
foo.b:
GlobalExport::
.loop:
Global.local:
: nop

---

(source_file
  (global_label_block
    (label)
    (local_label_block
      (local)))
  (global_label_block
    (label)
    (local_label_block
      (local))
    (local_label_block
      (local)
      (anonymous_label)
      (instruction_list
        (instruction
          (instruction_name))))))

================================================================================
Labels: Lonely
================================================================================

; lonely labels
.bare
.ok: ; no instruction + inline comment
.done ; no colon + inline comment
:
: ; anonymous label + inline comment

---

(source_file
  (inline_comment)
  (local_label_block
    (local))
  (local_label_block
    (local)
    (inline_comment))
  (local_label_block
    (local)
    (inline_comment)
    (anonymous_label)
    (anonymous_label)
    (inline_comment)))

================================================================================
Labels: global, local, anonymous
================================================================================

;; Global labels
Start:
MainLoop::

; Local labels (shorthand + explicit)
Init:
.loop:
    jr .loop
.mid nop

AnotherGlobal:
AnotherGlobal.local:

; Anonymous labels
    jr :+
:   nop
    jr :-
:   ret

---

(source_file
  (inline_comment)
  (global_label_block
    (label))
  (global_label_block
    (label)
    (inline_comment))
  (global_label_block
    (label)
    (local_label_block
      (local)
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (local))))))
    (local_label_block
      (local)
      (instruction_list
        (instruction
          (instruction_name)))))
  (global_label_block
    (label)
    (local_label_block
      (local)
      (inline_comment)
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (anonymous_label_ref)))))
      (anonymous_label)
      (instruction_list
        (instruction
          (instruction_name)))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (anonymous_label_ref)))))
      (anonymous_label)
      (instruction_list
        (instruction
          (instruction_name))))))

================================================================================
Labels: whitespace sensitivity (no space vs space before colon)
================================================================================

; No space before colon = label definition
Start:
    nop

Loop::
    ret

; Anonymous label on same line as previous instruction
:   nop
    ld a, 5

; Multiple instructions on same line with ::
    nop :: ret

---

(source_file
  (inline_comment)
  (global_label_block
    name: (label)
    (instruction_list
      (instruction
        opcode: (instruction_name))))
  (global_label_block
    name: (label)
    (instruction_list
      (instruction
        opcode: (instruction_name)))
    (inline_comment)
    (anonymous_label)
    (instruction_list
      (instruction
        opcode: (instruction_name)))
    (instruction_list
      (instruction
        opcode: (instruction_name)
        (operand_list
          (expression
            (register))
          (expression
            (number_literal)))))
    (inline_comment)
    (instruction_list
      (instruction
        opcode: (instruction_name))
      (instruction
        opcode: (instruction_name)))))

================================================================================
Labels: raw identifiers with # prefix
================================================================================

; Raw identifiers allow using reserved keywords as symbols
#load:
#LOAD::
#IF:
#ELSE:

; Can be used in expressions
DEF x = #load + #LOAD

---

(source_file
  (inline_comment)
  (global_label_block
    (raw_identifier))
  (global_label_block
    (raw_identifier))
  (global_label_block
    (raw_identifier))
  (global_label_block
    (raw_identifier)
    (inline_comment)
    (directive
      (def_directive
        (directive_keyword)
        (symbol)
        (expression
          (binary_expression
            (expression
              (raw_identifier))
            (expression
              (raw_identifier))))))))

================================================================================
Qualified local labels: outside global scope with colon
================================================================================

SECTION "Main", ROM0
Start.local:
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (instruction_list
        (instruction
          (instruction_name))))))

================================================================================
Qualified local labels: outside global scope without colon
================================================================================

SECTION "Main", ROM0
Start.local
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (instruction_list
        (instruction
          (instruction_name))))))

================================================================================
Qualified local labels: mix with global and unqualified local
================================================================================

SECTION "Main", ROM0
Global:
.unqualified
  nop
Global.qualified:
  nop
Other.qualified
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (global_label_block
      (label)
      (local_label_block
        (local)
        (instruction_list
          (instruction
            (instruction_name))))
      (local_label_block
        (local)
        (instruction_list
          (instruction
            (instruction_name))))
      (local_label_block
        (local)
        (instruction_list
          (instruction
            (instruction_name)))))))

================================================================================
Qualified local labels: reference from different scope
================================================================================

SECTION "Main", ROM0
Global1:
.local:
  nop
Global2:
  jr Global1.local

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (global_label_block
      (label)
      (local_label_block
        (local)
        (instruction_list
          (instruction
            (instruction_name)))))
    (global_label_block
      (label)
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (local))))))))

================================================================================
Qualified local labels: can be exported
================================================================================

SECTION "Test", ROM0
MyFunc.entry::
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (anonymous_label)
      (instruction_list
        (instruction
          (instruction_name))))))

================================================================================
Qualified local labels: multiple in sequence
================================================================================

SECTION "Test", ROM0
Table.header:
  db "HDR"
Table.data:
  db 1, 2, 3
Table.footer:
  db "END"

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal))))))
    (local_label_block
      (local))
    (local_label_block
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal))
            (expression
              (number_literal))
            (expression
              (number_literal))))))
    (local_label_block
      (local))
    (local_label_block
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal))))))))

================================================================================
Qualified local labels: used in expressions and directives
================================================================================

SECTION "Data", ROM0
Table.start:
  db 1, 2, 3
Table.end:
DEF TABLE_SIZE = Table.end - Table.start

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal))
            (expression
              (number_literal))
            (expression
              (number_literal))))))
    (local_label_block
      (local))
    (local_label_block
      (directive
        (def_directive
          (directive_keyword)
          (symbol)
          (expression
            (binary_expression
              (expression
                (local))
              (expression
                (local)))))))))

================================================================================
Invalid: qualified local starting with keyword (EXPORT)
================================================================================

SECTION "Test", ROM0
Export.foo:
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (ERROR)
    (instruction_list
      (instruction
        (instruction_name)))))

================================================================================
Invalid: qualified local starting with keyword (uniqueness_affix)
================================================================================

; A qualified local label cannot start with a keyword before the dot,
; even if a uniqueness affix is used. This might be a bug in rgbasm though
IF.error\@

---

(source_file
  (inline_comment)
  (inline_comment)
  (ERROR
    (uniqueness_affix)))

================================================================================
Invalid: qualified local label must not start with DS
================================================================================

; DS + expr
DS .local
DS.local

---

(source_file
  (inline_comment)
  (directive
    (ds_directive
      (directive_keyword)
      (expression
        (local))))
  (ERROR))

================================================================================
Invalid: qualified local label must not start with ASSERT
================================================================================

; ASSERT + expr
ASSERT .local
ASSERT.local

---

(source_file
  (inline_comment)
  (directive
    (assert_directive
      (directive_keyword)
      (expression
        (local))))
  (ERROR))

================================================================================
Invalid: qualified local label must not start with EXPORT
================================================================================

; EXPORT + expr
EXPORT\@
EXPORT.local

---

(source_file
  (inline_comment)
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (macro_arg_raw))))
  (ERROR))

================================================================================
Invalid: qualified local label must not be parsed as OPT args
================================================================================

PUSHO ; no conflict with inline comment
OPT\@ local
OPT.local

---

(source_file
  (directive
    (pusho_directive
      (directive_keyword)))
  (inline_comment)
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (macro_arg_raw)
        (expression
          (symbol)))))
  (ERROR))

================================================================================
Invalid: qualified local label must not start with simple directives
================================================================================

; simple directive + expr
INCLUDE ; no conflict with inline comment
INCLUDE .local
INCLUDE.local

---

(source_file
  (inline_comment)
  (directive
    (include_directive
      keyword: (directive_keyword)))
  (inline_comment)
  (directive
    (include_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          name: (local)))))
  (ERROR))

================================================================================
Invalid: qualified local label must not merge with RB
================================================================================

DEF x = 5 RB.local

---

(source_file
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (ERROR
        (number_literal))
      (expression
        (local)))))

================================================================================
Invalid: label must not merge with directive
================================================================================

INCLUDEfoo.bar

---

(source_file
  (local_label_block
    (local)))

================================================================================
Invalid: macro call + expr must not parse as qualified local label
================================================================================

; macro call + expr should parse as local label
foo.local

---

(source_file
  (inline_comment)
  (local_label_block
    (local)))

================================================================================
Invalid: unqualified local after qualified local (no scope change)
================================================================================

SECTION "Test", ROM0
Qualified.local:
.foo
  nop

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (local_label_block
      (local))
    (local_label_block
      (instruction_list
        (instruction
          (instruction_name
            (MISSING "def_directive_token7"))
          (operand_list
            (expression
              (local)))))
      (instruction_list
        (instruction
          (instruction_name))))))
