tree-sitter-rgbasm/test/corpus/macros.txt
================================================================================
Macros: no arguments
================================================================================

foo_macro
bar_macro
spam_macro ;

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (inline_comment))))

================================================================================
Macros: expression arguments with numbers
================================================================================

parens (0)
mymacro 1, 2, 3
calcmacro (FOO + 1) << 2

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        global: (symbol))
      (argument_list
        (expression
          (expression
            (number_literal))))))
  (directive
    (macro_invocation
      (global_identifier
        global: (symbol))
      (argument_list
        (expression
          (number_literal))
        (expression
          (number_literal))
        (expression
          (number_literal)))))
  (directive
    (macro_invocation
      (global_identifier
        global: (symbol))
      (argument_list
        (expression
          (binary_expression
            left: (expression
              (expression
                (binary_expression
                  left: (expression
                    (identifier
                      (global_identifier
                        global: (symbol))))
                  right: (expression
                    (number_literal)))))
            right: (expression
              (number_literal))))))))

================================================================================
Macros: expression arguments with strings
================================================================================

print_str "Hello"
print_pair "foo", "bar"

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (string_literal)))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (string_literal))
        (expression
          (string_literal))))))

================================================================================
Macros: simple RAW arguments
================================================================================

print_all This test probably passes
debug_macro some words here

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol)))))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))))))

================================================================================
Macros: RAW arguments with multiple words
================================================================================

print_all This test has multiple words
log_macro Processing file data now

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol)))))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))))))

================================================================================
Macros: comment only (no RAW mode)
================================================================================

somemacro ; just a comment, no args
testmacro ; another comment

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (inline_comment)))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (inline_comment))))

================================================================================
Macros: block comment then RAW text
================================================================================

print_all /* leading comment */ This is RAW text
debug_log /* note */ Processing data

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (block_comment)
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol)))))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (block_comment)
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol))))
        (expression
          (identifier
            (global_identifier
              (symbol))))))))

================================================================================
Macros: expression arguments with identifiers
================================================================================

; Single identifiers correctly use expression parsing with improved heuristics

mymacro single_identifier
simple_call A

---

(source_file
  (inline_comment)
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (identifier
            (global_identifier
              (symbol)))))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (register))))))

================================================================================
Macros: mixed string and number arguments
================================================================================

log_entry "Error", 42
format_msg "Hello", 123, "World"

---

(source_file
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (string_literal))
        (expression
          (number_literal)))))
  (directive
    (macro_invocation
      (global_identifier
        (symbol))
      (argument_list
        (expression
          (string_literal))
        (expression
          (number_literal))
        (expression
          (string_literal))))))
